k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: resourcer-app
  namespace: resourcer
spec:
  selector:
    app: resourcer-app
  ports:
  - name: http
    port: 80
    targetPort: http
