k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: resourcer-app
  namespace: resourcer
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - resourcer.work
    secretName: resourcer-app-tsl
  rules:
  - host: resourcer.work
    http:
      paths:
      - path: /
        backend:
          serviceName: resourcer-app
          servicePort: http
